# cggmp-node-binding

./: .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  build.rs  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
__tests__/: executor.test.ts
proto/: cggmp.proto
src/: index.ts  lib.rs  signing.rs
src/proto/: cggmp.ts
