[package]
name = "cggmp-node-binding"
version = "0.1.0"
edition = "2021"
description = "Node.js native binding for CGGMP24 MPC ECDSA protocol"
license = "MIT"
repository = "https://github.com/anthropics/cggmp-node-binding"
keywords = ["mpc", "ecdsa", "cggmp24", "threshold-signature", "napi"]
categories = ["cryptography", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
rand_dev = "0.1"
sha2 = "0.10"
round-based = { version = "0.4.1", features = ["sim"] }
# CGGMP24 crates.io dependency
cggmp24 = { version = "0.7.0-alpha.3", default-features = false, features = ["curve-secp256k1", "spof", "state-machine", "backend-num-bigint"] }
cggmp24-keygen = { version = "0.7.0-alpha.3", default-features = false, features = ["state-machine"] }
prost = { version = "0.13", default-features = false, features = ["prost-derive"] }
base64 = "0.22"
bincode = "1.3"
futures = "0.3"
serde_repr = "0.1"
generic-ec = "0.4.1"
rayon = "1.11.0"

[build-dependencies]
napi-build = "2"
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }

[profile.release]
lto = true
strip = "symbols"

[package.metadata.napi]
default-node-version = 20
